--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="please_wait">Please Wait</string>
+    <string name="name">Name</string>
+    <string name="phone">Mobile Number</string>
     <string name="email_id">Email ID</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
